# pytorch-practice

./: 00_pytorch_fundamentals_video.ipynb  pyproject.toml  requirements.txt  test.ipynb
