[tool.poetry]
name = "pytorch-practice"
version = "0.1.0"
description = ""
authors = ["samiulalimsaad <samiulalimsaad@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
